# calc

./: CMakeLists.txt  readme.md
src/: main.cpp
src/calc/: AST.cpp  AST.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h  Word.cpp  Word.h
